# oxidize

./: .env.dist  .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: rust.yml
i8n/: en-US.ftl  es-ES.ftl
ops/: init-mongo.js
src/: lib.rs  main.rs  tests.rs
src/framework/: app.rs  auth.rs  config.rs  mod.rs  testing.rs  translator.rs
src/libs/: app.rs  mod.rs  testing.rs
src/modules/: mod.rs
src/modules/auth/: auth.service.rs
src/modules/mail/: controller.rs  dto.rs  mod.rs  service.rs  test.rs
src/modules/mongo/: mod.rs  service.rs  test.rs
src/modules/user/: controller.rs  dto.rs  guard.rs  mod.rs  service.rs  test.rs
tests/: mail.rs  mongo.int.rs  mongo.rs  user.rs
