[package]
name = "oxidize"
version = "0.2.1"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
pear_codegen = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
dotenv = "*"
redis = "*"
redis-derive = "*"
tokio = { version = "*", features = ["full"] }
chrono = { version = "*", features = ["serde"] }
chrono-tz ="*"
futures = "*"
rand = "*"
jsonwebtoken = "*"
async-trait = "*"
log = "*"
env_logger = "*"
async-once-cell = "*"
base64 = "0.22.0"
pem="*"
rsa = "*"
config = "*"
lettre = "*"
fluent = "*"
fluent-bundle = "*"
fluent-langneg = "*"
intl-memoizer = "*"
unic-langid = "*"
fake = "*"
scylla = "0.13.0"

[dependencies.rocket_db_pools]
version = "*"
features = ["mongodb"]


